# voiceChat

./: CMakeLists.txt  WORKFLOW.md  readme.md
benchmark/: CMakeLists.txt  mixer_benchmark.cpp  stress_test.cpp
opus-1.3.1/: Makefile  config.status  libopus.la  libtool  opus_compare  opus_demo  repacketizer_demo
opus-1.3.1/.libs/: opus_demo  repacketizer_demo
opus-1.3.1/celt/.deps/: bands.Plo  celt.Plo  celt_decoder.Plo  celt_encoder.Plo  celt_lpc.Plo  cwrs.Plo  entcode.Plo  entdec.Plo  entenc.Plo  kiss_fft.Plo  laplace.Plo  mathops.Plo  mdct.Plo  modes.Plo  pitch.Plo  quant_bands.Plo  rate.Plo  vq.Plo
opus-1.3.1/celt/tests/: test_unit_cwrs32  test_unit_dft  test_unit_entropy  test_unit_laplace  test_unit_mathops  test_unit_mdct  test_unit_rotation  test_unit_types
opus-1.3.1/celt/tests/.deps/: test_unit_cwrs32.Po  test_unit_dft.Po  test_unit_entropy.Po  test_unit_laplace.Po  test_unit_mathops.Po  test_unit_mdct.Po  test_unit_rotation.Po  test_unit_types.Po
opus-1.3.1/celt/x86/.deps/: celt_lpc_sse4_1.Plo  pitch_sse.Plo  pitch_sse2.Plo  pitch_sse4_1.Plo  vq_sse2.Plo  x86_celt_map.Plo  x86cpu.Plo
opus-1.3.1/doc/: Makefile
opus-1.3.1/silk/.deps/: A2NLSF.Plo  CNG.Plo  HP_variable_cutoff.Plo  LPC_analysis_filter.Plo  LPC_fit.Plo  LPC_inv_pred_gain.Plo  LP_variable_cutoff.Plo  NLSF2A.Plo  NLSF_VQ.Plo  NLSF_VQ_weights_laroia.Plo  NLSF_decode.Plo  NLSF_del_dec_quant.Plo  NLSF_encode.Plo  NLSF_stabilize.Plo  NLSF_unpack.Plo  NSQ.Plo  NSQ_del_dec.Plo  PLC.Plo  VAD.Plo  VQ_WMat_EC.Plo  ana_filt_bank_1.Plo  biquad_alt.Plo  bwexpander.Plo  bwexpander_32.Plo  check_control_input.Plo  code_signs.Plo  control_SNR.Plo  control_audio_bandwidth.Plo  control_codec.Plo  debug.Plo  dec_API.Plo  decode_core.Plo  decode_frame.Plo  decode_indices.Plo  decode_parameters.Plo  decode_pitch.Plo  decode_pulses.Plo  decoder_set_fs.Plo  enc_API.Plo  encode_indices.Plo  (+37 more)
opus-1.3.1/silk/float/.deps/: LPC_analysis_filter_FLP.Plo  LPC_inv_pred_gain_FLP.Plo  LTP_analysis_filter_FLP.Plo  LTP_scale_ctrl_FLP.Plo  apply_sine_window_FLP.Plo  autocorrelation_FLP.Plo  burg_modified_FLP.Plo  bwexpander_FLP.Plo  corrMatrix_FLP.Plo  encode_frame_FLP.Plo  energy_FLP.Plo  find_LPC_FLP.Plo  find_LTP_FLP.Plo  find_pitch_lags_FLP.Plo  find_pred_coefs_FLP.Plo  inner_product_FLP.Plo  k2a_FLP.Plo  noise_shape_analysis_FLP.Plo  pitch_analysis_core_FLP.Plo  process_gains_FLP.Plo  regularize_correlations_FLP.Plo  residual_energy_FLP.Plo  scale_copy_vector_FLP.Plo  scale_vector_FLP.Plo  schur_FLP.Plo  sort_FLP.Plo  warped_autocorrelation_FLP.Plo  wrappers_FLP.Plo
opus-1.3.1/silk/tests/: test_unit_LPC_inv_pred_gain
opus-1.3.1/silk/tests/.deps/: test_unit_LPC_inv_pred_gain.Po
opus-1.3.1/silk/x86/.deps/: NSQ_del_dec_sse4_1.Plo  NSQ_sse4_1.Plo  VAD_sse4_1.Plo  VQ_WMat_EC_sse4_1.Plo  x86_silk_map.Plo
opus-1.3.1/src/.deps/: analysis.Plo  mapping_matrix.Plo  mlp.Plo  mlp_data.Plo  opus.Plo  opus_compare.Po  opus_decoder.Plo  opus_demo.Po  opus_encoder.Plo  opus_multistream.Plo  opus_multistream_decoder.Plo  opus_multistream_encoder.Plo  opus_projection_decoder.Plo  opus_projection_encoder.Plo  repacketizer.Plo  repacketizer_demo.Po
opus-1.3.1/tests/: test_opus_api  test_opus_decode  test_opus_encode  test_opus_padding  test_opus_projection
opus-1.3.1/tests/.deps/: opus_encode_regressions.Po  test_opus_api.Po  test_opus_decode.Po  test_opus_encode.Po  test_opus_padding.Po  test_opus_projection.Po
opus-1.3.1/tests/.libs/: test_opus_api  test_opus_decode  test_opus_encode  test_opus_padding
opus/lib/: libopus.la  libopus.so.0.8.0
opus/lib/pkgconfig/: opus.pc
scripts/: build.sh
src/: CMakeLists.txt  main.cc
src/client/: test_client.cpp
src/codec/: AudioMixer.cc  AudioMixer.h  OpusDecoder.cc  OpusDecoder.h  OpusEncoder.cc  OpusEncoder.h  ProtobufCodec.cc  ProtobufCodec.h
src/common/: Logger.h  Timestamp.h  noncopyable.h
src/net/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  Channel.cc  Channel.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  InetAddress.cc  InetAddress.h  Poller.cc  Poller.h  SocketsOps.cc  SocketsOps.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h
src/pool/: LockFreeQueue.h  ObjectPool.h  ThreadPool.cc  ThreadPool.h
src/proto/: CMakeLists.txt  chat.proto
src/room/: RoomManager.cc  RoomManager.h  User.h  VoiceRoom.cc  VoiceRoom.h
src/timer/: Timer.cc  Timer.h  TimerManager.cc  TimerManager.h
